--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,5 @@
+/* ----------------------------------- ETC ---------------------------------- */
+
 body { /* 빈 공간 채우기 */
     margin-top: 0;
     margin-bottom: 0;
@@ -12,7 +14,7 @@ body { /* 빈 공간 채우기 */
 #first {
     width: 100%;
     height: 1000px;
-    background-color: #2a333d;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,11 +28,12 @@ body { /* 빈 공간 채우기 */
     
 }
 
-#text {
+#titlebox {
     font-size: 40px;
     text-align: center;
     color: white;
     font-weight: bold;
+    overflow: hidden ;
     /* 텍스트 드래그, 선택 금지 */
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -40,15 +43,41 @@ body { /* 빈 공간 채우기 */
     user-select: none;
 }
 
+#textbox1 {
+    overflow: hidden;
+    position: absolute;
+    width: 500px;
+    height: 55px;
+}
+#textbox2 {
+    overflow: hidden;
+    position: absolute;
+    width: 500px;
+    height: 55px;
+    margin-top: 55px;
+}
+
+#btnbox {
+    overflow: hidden;
+    position: relative;
+    width: 50%;
+    height: 62px;
+    top: 130px;
+    left: 125px;
+}
+
+
+
 #viewBtn {
     position: relative;
-    left: 125px;
-    top: 40px;
-    width: 50%;
+    /* left: 125px;
+    top: 130px; */
+    width: 250px;
     height: 60px;
     font-size: 30px;
     border: white solid 3px;
     /*background-color: #444d56;*/
+    
     
     color: white;
     border-color: white white white white; /* 테두리 상 우 하 좌*/
@@ -95,7 +124,6 @@ body { /* 빈 공간 채우기 */
 }
 
 #about_bottomBar {
-    
     text-align: center;
     width: 500px;
     margin: auto;
@@ -163,6 +191,9 @@ body { /* 빈 공간 채우기 */
     background-color: darkcyan;
 }
 
+
+
+
 /* -------------------------------------- CONNECT -------------------------------------- */
 
 #shape_top {
@@ -208,10 +239,6 @@ body { /* 빈 공간 채우기 */
     border: black solid 3px;
     cursor: pointer;
 }
-
-
-
-
 
 
 
