--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,16 @@
+/* --------------------------------- Import --------------------------------- */
+
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap'); 
+/* font-family: 'Staatliches', cursive; */
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Staatliches&display=swap');
+/* font-family: 'Dancing Script', cursive; */
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Righteous&family=Staatliches&display=swap');
+/* font-family: 'Righteous', cursive; */
+
+
+
 /* ----------------------------------- ETC ---------------------------------- */
 
 body { /* 빈 공간 채우기 */
@@ -6,6 +19,10 @@ body { /* 빈 공간 채우기 */
     margin-left: 0;
     margin-right: 0;
     overflow-x: hidden; overflow-y: auto; /* 가로 스크롤 없애기 */
+  }
+
+  .contents {
+    width: 100%;
   }
 
   
@@ -109,11 +126,14 @@ nav > * {
     padding-right: 80px;
     letter-spacing: 2px; /* 글자 간 간격 */
     cursor: pointer;
+}
+
+.nav_text {
     transition: all 0.9s;
 }
 
 
-/* -------------------------------------- ABOUT -------------------------------------- */
+/* ------------------------------- Page title ------------------------------- */
 
 #text_title {
     font-size: 60px;
@@ -136,37 +156,104 @@ nav > * {
     border-bottom: rgb(39, 39, 39) solid 10px;
 }
 
-#info_and_skill {
-    margin: auto;
-    width: 1500px;
-    background-color: thistle;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+/* -------------------------------------- ABOUT -------------------------------------- */
+
+#info_box {
+    width: 1050px;
+    height: 650px;
+    float: left;
 }
 
-#my_info {
-    background-color: transparent;
-    height: 700px;
-    display: grid;
-    grid-template-rows: 5fr 3fr;
+#skill_box {
+    width: 750px;
+    height: 650px;
+    margin-left: 1060px;
 }
 
-#status {
-    background-color: yellowgreen;
-    height: 700px;
+#introduce {
+    position: absolute;
+    background-color: rgb(237, 243, 243);
+    width: 350px;
+    height: 500px;
+    border-radius: 10px;
+    border: rgb(2, 104, 129) 5px solid;
+    left: 100px;
+    /* box-shadow: rgb(4, 129, 98) 0 0 10px; */
+    z-index: 30;
 }
+
 
 #me {
+    position: relative;
     background-image: url(../assets/me.jpg);
     background-repeat: no-repeat; /* 이미지 반복 안되게 */
     background-size: contain;
-    width: 375px;
-    height: 500px;
-    margin: auto;
+    width: 350px;
+    height: 466px;
+    top: 80px;
+    left: 350px;
+    border-radius: 10px;
+    border: black 5px solid;
+    /* box-shadow: rgb(0, 0, 0) 0 0 10px; */
+    z-index: 50;
 }
 
 #info {
-    background-color: tomato;
+    position: relative;
+    background-color: rgb(253, 237, 237);
+    width: 350px;
+    height: 500px;
+    border-radius: 10px;
+    border: rgb(110, 1, 1) 5px solid;
+    top: -340px;
+    left: 600px;
+    /* box-shadow: crimson 0 0 10px; */
+    z-index: 30;
+}
+
+#skill {
+    
+    position: relative;
+    background-color: white;
+    width: 600px;
+    height: 600px;
+    left: 140px;
+    top: 80px;
+    border-radius: 10px;
+    border: black 5px solid;
+    
+}
+#skills {
+    position: absolute;
+    
+    width: 200px;
+    height: 680px;
+    border-radius: 10px;
+    border: black 5px solid;
+    
+}
+
+#skill_header {
+    width: 200px;
+    height:  80px;
+    background-color: white;
+    font-size: 50px;
+    font-family: 'Righteous', cursive;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: 2px;
+}
+
+#list {
+    padding-top: 5px;
+    font-size: 22px;
+    font-family: 'Righteous', cursive;
+   
+}
+
+.lists {
+   padding-bottom: 55px;
 }
 
 
@@ -207,13 +294,13 @@ nav > * {
 #shape_top {
     width: 100%;
     height: 500px;
-    background: linear-gradient(-55deg, #f3f5f0 80%, #dfe8eb 20%); /* 대각선으로 div 색칠하기*/
+    background: linear-gradient(-55deg, #f5f7f8 80%, #dfe8eb 20%); /* 대각선으로 div 색칠하기*/
 }
 
 #shape_bottom {
     width: 100%;
     height: 500px;
-    background: linear-gradient(-125deg, #f3f5f0 80%, #dfe8eb 20%); /* 대각선으로 div 색칠하기*/
+    background: linear-gradient(-125deg, #f5f7f8 80%, #dfe8eb 20%); /* 대각선으로 div 색칠하기*/
 }
 
 #send_box {
