--- a/CSS/animation.css
+++ b/CSS/animation.css
@@ -43,6 +43,12 @@
     color: rgb(223, 11, 135);
 }
 
+/* ---------------------------------- about --------------------------------- */
+
+.list_name:hover {
+    color: red;
+}
+
 
 
 /* -------------------------------------------------------------------------- */
