--- a/CSS/main.css
+++ b/CSS/main.css
@@ -245,15 +245,72 @@ nav > * {
     letter-spacing: 2px;
 }
 
+.pie-chart {
+    position: relative;
+    display:inline-block;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    transition: 0.3s;
+    left: 100px;
+    top: 40px;
+  }
+  
+  span.center{
+    background: #fff;
+    display : block;
+    position: absolute;
+    top:50%; left:50%;
+    width:300px; height:300px;
+    border-radius: 50%;
+    text-align:center; line-height: 300px;
+    font-size:50px;
+    transform: translate(-50%, -50%);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  #skill_name {
+    position: relative;
+    width: 400px;
+    height: 120px;
+    top: 50px;
+    left: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    white-space:nowrap;
+    font-family: 'Righteous', cursive;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: rgb(14, 255, 126);
+    z-index: 99;
+  }
+
 #list {
     padding-top: 5px;
     font-size: 22px;
     font-family: 'Righteous', cursive;
+    color: black;
    
 }
 
 .lists {
    padding-bottom: 55px;
+}
+
+.list_name {
+    transition: all 0.2s;
+    cursor: pointer;
 }
 
 
@@ -369,4 +426,12 @@ div에 가운데부분에 텍스트 위치 시키기
 display: flex;
 justify-content: center;
 align-items: center;
+
+ 텍스트 드래그, 선택 금지 
+-webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
 */
