--- a/Z_css_Test/옆에서 서서히 나타나기/test.css
+++ b/Z_css_Test/옆에서 서서히 나타나기/test.css
@@ -19,9 +19,9 @@
 }
 
 #absolute {
-    position: absolute;
+    position: relative;
     background-color: darkblue;
-    top: 50px;
+    top: -50px;
     left: 50px;
     width: 100px;
     height: 100px;
